--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,16 +448,35 @@ span.span-number {
   max-width: 40%;
 }
 
-/* Стили для кнопки "Записаться" */
 #show-form {
-  background-color: #4CAF50;
-  color: white;
+  display: block;
+  margin: 0 auto;
+  background-color: var(--color1);
+  color: var(--color4);
   padding: 10px 20px;
-  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 26px;
+  font-weight: 700;
   cursor: pointer;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  margin-bottom: 50px;
 }
 
-/* Стили для всплывающего окна */
+#show-form:hover {
+  background-color: var(--color2);
+  color: var(--color1);
+  -webkit-transform: translateY(-2px);
+      -ms-transform: translateY(-2px);
+          transform: translateY(-2px);
+  -webkit-box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+          box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
 .form-popup {
   display: none;
   position: fixed;
@@ -465,11 +484,10 @@ span.span-number {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Затемнение фона */
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 9999;
 }
 
-/* Стили для контейнера формы */
 .form-container {
   position: absolute;
   top: 50%;
@@ -479,12 +497,50 @@ span.span-number {
           transform: translate(-50%, -50%);
   max-width: 500px;
   padding: 20px;
-  background-color: #fff;
+  background-color: var(--color4);
+  border-radius: 5px;
 }
 
-/* Стили для кнопки "Отмена" в форме */
+.form-subtitle {
+  margin-bottom: 20px;
+}
+
+.comand {
+  font-size: 26px;
+  color: var(--color1);
+}
+
 .cancel {
-  background-color: #f44336;
+  background-color: var(--color5);
+  color: var(--color1);
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.form-container input[type=text], .form-container textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+}
+
+.form-container button[type=submit] {
+  background-color: var(--color1);
+  color: var(--color4);
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.form-container button[type=submit]:hover {
+  background-color: var(--color2);
 }
 
 @media (max-width: 992px) {
@@ -500,6 +556,14 @@ span.span-number {
   .end-wrap {
     text-align: center;
   }
+  .form-container {
+    width: 100%;
+    padding: 10px;
+  }
+  .form-container input[type=text], .form-container textarea {
+    width: 100%;
+    padding: 8px;
+  }
 }
 @media (max-width: 887px) {
   .main-img {
@@ -507,6 +571,14 @@ span.span-number {
   }
   .conditions-img {
     max-width: 50%;
+  }
+  .form-container {
+    width: 100%;
+    padding: 10px;
+  }
+  .form-container input[type=text], .form-container textarea {
+    width: 100%;
+    padding: 8px;
   }
 }
 @media (max-width: 768px) {
@@ -694,6 +766,14 @@ span.span-number {
   .end-wrap {
     margin-top: 0;
   }
+  .form-container {
+    width: 100%;
+    padding: 10px;
+  }
+  .form-container input[type=text], .form-container textarea {
+    width: 100%;
+    padding: 8px;
+  }
 }
 @media (max-width: 480px) {
   .container {
@@ -875,6 +955,23 @@ span.span-number {
   .end-cont {
     margin-top: 0;
   }
+  .form-container {
+    width: 90%;
+    padding: 10px;
+  }
+  .form-container input[type=text], .form-container textarea {
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
+  }
+  .form-container button[type=submit] {
+    padding: 10px 16px;
+    font-size: 16px;
+  }
+  .cancel {
+    padding: 10px 16px;
+    font-size: 16px;
+  }
 }
 @media (max-width: 320px) {
   .number {
@@ -908,5 +1005,22 @@ span.span-number {
   .condition-link {
     max-width: 100%;
     font-size: 26px;
+  }
+  .form-container {
+    width: 90%;
+    padding: 10px;
+  }
+  .form-container input[type=text], .form-container textarea {
+    width: 100%;
+    padding: 8px;
+    font-size: 14px;
+  }
+  .form-container button[type=submit] {
+    padding: 10px 16px;
+    font-size: 14px;
+  }
+  .cancel {
+    padding: 10px 16px;
+    font-size: 14px;
   }
 }
