--- a/assets/style.scss
+++ b/assets/style.scss
@@ -293,16 +293,29 @@ span.span-number {
 
 //форма
 
-/* Стили для кнопки "Записаться" */
 #show-form {
-  background-color: #4CAF50;
-  color: white;
+  display: block;
+  margin: 0 auto;
+  background-color: var(--color1);
+  color: var(--color4);
   padding: 10px 20px;
-  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 26px;
+  font-weight: 700;
   cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  margin-bottom: 50px;
 }
 
-/* Стили для всплывающего окна */
+#show-form:hover {
+  background-color: var(--color2);
+  color: var(--color1);
+  transform: translateY(-2px);
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
 .form-popup {
   display: none;
   position: fixed;
@@ -310,11 +323,11 @@ span.span-number {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Затемнение фона */
+  background-color: rgba(0, 0, 0, 0.7); 
   z-index: 9999;
 }
 
-/* Стили для контейнера формы */
+
 .form-container {
   position: absolute;
   top: 50%;
@@ -322,14 +335,49 @@ span.span-number {
   transform: translate(-50%, -50%);
   max-width: 500px;
   padding: 20px;
-  background-color: #fff;
+  background-color: var(--color4);
+	border-radius: 5px;
+}
+.form-subtitle{
+	margin-bottom: 20px;
 }
 
-/* Стили для кнопки "Отмена" в форме */
-.cancel {
-  background-color: #f44336;
+.comand{
+	font-size: 26px;
+	color: var(--color1) ;
+}
+  .cancel {
+    background-color: var(--color5);   
+    color: var(--color1); 
+    padding: 12px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
+
+.form-container input[type=text], .form-container textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+}
+
+.form-container button[type=submit] {
+  background-color: var(--color1);
+  color: var(--color4);
+  padding: 12px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.form-container button[type=submit]:hover {
+  background-color: var(--color2);
+}
 
 
 
@@ -349,6 +397,15 @@ span.span-number {
 	.end-wrap {
 		text-align: center;
 	}
+	.form-container {
+		width: 100%;
+		padding: 10px;
+	}
+	
+	.form-container input[type=text], .form-container textarea {
+		width: 100%;
+		padding: 8px;		
+	}
 }
 	
 	@media (max-width: 887px) {
@@ -357,6 +414,15 @@ span.span-number {
 		}
 		.conditions-img {
 			max-width: 50%;
+		}
+		.form-container {
+			width: 100%;
+			padding: 10px;
+		}
+		
+		.form-container input[type=text], .form-container textarea {
+			width: 100%;
+			padding: 8px;		
 		}
 	}
 
@@ -530,6 +596,15 @@ span.span-number {
 	}
 	.end-wrap {
 		margin-top: 0;
+	}
+	.form-container {
+		width: 100%;
+		padding: 10px;
+	}
+	
+	.form-container input[type=text], .form-container textarea {
+		width: 100%;
+		padding: 8px;		
 	}
 }
 
@@ -705,6 +780,27 @@ span.span-number {
 	.end-cont {
 		margin-top: 0;
 	}
+	.form-container {
+    width: 90%;
+    padding: 10px;
+  }
+
+  .form-container input[type=text], .form-container textarea {
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
+  }
+
+  .form-container button[type=submit] {
+    padding: 10px 16px;
+    font-size: 16px;
+  }
+
+  .cancel {
+    padding: 10px 16px;
+    font-size: 16px;
+  }
+	
 }
 
 @media (max-width: 320px) {
@@ -739,6 +835,26 @@ span.span-number {
 .condition-link {	
 	max-width: 100%;	
 	font-size: 26px;
+}
+.form-container {
+	width: 90%;
+	padding: 10px;
+}
+
+.form-container input[type=text], .form-container textarea {
+	width: 100%;
+	padding: 8px;
+	font-size: 14px;
+}
+
+.form-container button[type=submit] {
+	padding: 10px 16px;
+	font-size: 14px;
+}
+
+.cancel {
+	padding: 10px 16px;
+	font-size: 14px;
 }
 
 }
